@@ -5,7 +5,7 @@ until [ $err == 0 ];
 do
 	[ -d log/ ] || mkdir log/
 	[ -f log/console.log ] && mv log/console.log "log/backup/`date +%Y-%m-%d_%H-%M-%S`_console.log"
-	java -Xms128m -Xmx1536m -cp ../libs/*:AU-Game.jar com.aionemu.gameserver.GameServer > log/console.log 2>&1
+	java -server -Dfile.encoding=UTF-8 -Dorg.slf4j.simpleLogger.log.com.zaxxer.hikari=warn -XX:+UseZGC -Xms2g -Xmx4g -cp ../libs/*:AionEmu-Game.jar com.aionemu.gameserver.GameServer > log/console.log 2>&1
 	err=$?
 	gspid=$!
 	echo ${gspid} > gameserver.pid
