@@ -4,7 +4,7 @@ err=1
 until [ $err == 0 ];
 do
 
-	java -Xms8m -Xmx32m -cp ../libs/*:AionEmu-Login.jar com.aionemu.loginserver.LoginServer
+	java -server -Dfile.encoding=UTF-8 -Dorg.slf4j.simpleLogger.log.com.zaxxer.hikari=warn -XX:+UseZGC -Xms128m -Xmx256m -cp ../libs/*:AionEmu-Login.jar com.aionemu.loginserver.LoginServer
 	err=$?
 	lspid=$!
 	echo ${lspid} > loginserver.pid
